@@ -1,0 +1,7 @@
+film.width = 1200
+film.height = 900
+scene.file = randmap.scn
+# Film image pipeline plug-ins
+film.imagepipeline.0.type = TONEMAP_LINEAR
+film.imagepipeline.1.type = GAMMA_CORRECTION
+film.imagepipeline.1.value = 2.2
