@@ -1,6 +1,6 @@
 film.width = 1200
 film.height = 900
-scene.file = rt.scn
+scene.file = randtile.scn
 # Film image pipeline plug-ins
 film.imagepipeline.0.type = TONEMAP_LINEAR
 film.imagepipeline.1.type = GAMMA_CORRECTION
