@@ -25,6 +25,7 @@
 * Added the support for Distort texture
 * Now individual bricks, in brick texture, have a pseudo-random mix between two colors by default
 * Added the support for Randomized Texture Tiling (#228)
+* Added the support for UVRandomMapping2D
 
 ### Fixed Bugs
 
